k8s/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
